--- a/Adressbok/App.config
+++ b/Adressbok/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Adressbok.Properties.Settings.Adressbok2ConnectionString"
+            connectionString="Data Source=.;Initial Catalog=Adressbok2;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
