--- a/Adressbok/App.config
+++ b/Adressbok/App.config
@@ -3,8 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Adressbok.Properties.Settings.Adressbok2ConnectionString"
-            connectionString="Data Source=.;Initial Catalog=Adressbok2;Integrated Security=True"
+        <add name="Adressbok.Properties.Settings.AdressbokConnectionString"
+            connectionString="Data Source=.;Initial Catalog=Adressbok;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
